<resources>
    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-5747146577301976/3904383247</string>
    <string name="read_checkbox_label">Read mode</string>
    <string name="spell_checkbox_label">Spell mode</string>
    <string name="three_letter_words_label">3 letter words</string>
    <string name="four_letter_words_label">4 letter words</string>
    <string name="five_letter_words_label">5 letter words - coming soon</string>
    <string name="kindergarten">kindergarten</string>
    <string name="listen_button_text">Listen to Word</string>
    <string name="speak_button_text">Say Word</string>
    <string name="submit_button_text">Check spelling</string>
    <string name="game_type_label">game_type_label</string>

    <string name="banner_ad_unit_id">ca-app-pub-5747146577301976/8570621645</string>
    <string name="hiragana">hiragana</string>
    <string name="katakana">katakana</string>
    <string name="congrats">Congratulations</string>

</resources>
