<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout android:layout_width="wrap_content"
                  android:orientation="horizontal"
                  android:gravity="left"
                  android:layout_height="wrap_content">
        <CheckBox android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/read_checkbox"
        />
        <TextView android:layout_width="wrap_content"
                  android:text="@string/read_checkbox_label"
                  android:layout_height="wrap_content"/>
        <CheckBox android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/spell_checkbox"
        />
        <TextView android:layout_width="wrap_content"
                  android:text="@string/spell_checkbox_label"
                  android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:orientation="vertical"
                  android:layout_height="wrap_content">
        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/three_letter_button"
                android:text="@string/three_letter_words_label"/>
        <Button android:layout_width="match_parent"
                android:id="@+id/kindergarten_button"
                android:layout_height="wrap_content"
                android:text="@string/kindergarten"/>
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five_letter_words_label"/>
    </LinearLayout>
</LinearLayout>